# chiquito

./: .gitignore  API Documentation  Appendix.md  Cargo.toml  Makefile  README.md  fibo.toml  fibo_fixed.csv  mimc7.toml  mimc7_fixed.csv  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: api_rust_doc.yml  pypi_publish.yml  rust.yml
book/: _config.yml  _toc.yml  appendix_chapter1.md  appendix_chapter2.md  appendix_chapter3.md  chiquito_programming_model.md  landing_page.md  part1_chapter1.md  part1_chapter2.md  part1_chapter3.md  part1_chapter4.md  part1_chapter5.ipynb  part2_chapter2.ipynb  part2_chapter3.ipynb  part2_chapter4.ipynb  part2_chapter5.ipynb  part3_chapter1.ipynb  part3_chapter2.ipynb  part3_chapter4.ipynb
book/_build/.doctrees/: chiquito_programming_model.doctree  environment.pickle  landing_page.doctree  part1.doctree  part1_chapter1.doctree  part1_chapter2.doctree  part1_chapter3.doctree  part1_chapter4.doctree  part2.doctree  part2_chapter1.doctree  part2_chapter2.doctree  part2_chapter3.doctree  part2_chapter4.doctree  part2_chapter5.doctree  part3_chapter1.doctree  part3_chapter2.doctree  part3_chapter3.doctree  part3_chapter4.doctree  python_syntax.doctree  what_is_chiquito.doctree  what_is_zkp.doctree
book/_build/html/: .buildinfo  chiquito_programming_model.html  genindex.html  index.html  landing_page.html  objects.inv  part1.html  part1_chapter1.html  part1_chapter2.html  part1_chapter3.html  part1_chapter4.html  part2.html  part2_chapter1.html  part2_chapter2.html  part2_chapter3.html  part2_chapter4.html  part2_chapter5.html  part3_chapter1.html  part3_chapter2.html  part3_chapter3.html  part3_chapter4.html  python_syntax.html  search.html  searchindex.js  what_is_chiquito.html  what_is_zkp.html
book/_build/jupyter_execute/: part1.ipynb  part2.ipynb  part2_chapter1.ipynb  part2_chapter2.ipynb  part2_chapter3.ipynb  part2_chapter4.ipynb  part2_chapter5.ipynb  part3_chapter1.ipynb  part3_chapter2.ipynb  part3_chapter3.ipynb  part3_chapter4.ipynb
chiquito-compiler/: README.md
chiquito-compiler/examples/: blake2f.rs  keccak.rs  mimc7_constants.py  poseidon.py
chiquito-compiler/src/: stdlib.rs
chiquito-compiler/src/parser/: build.rs
chiquito-compiler/src/plonkish/: mod.rs
chiquito-compiler/src/poly/: reduce.rs
chiquito-compiler/test/: circuit.chiquito
docs/: .buildinfo  CNAME  appendix_chapter1.html  appendix_chapter2.html  appendix_chapter3.html  genindex.html  help.html  index.html  landing_page.html  objects.inv  part1_chapter1.html  part1_chapter2.html  part1_chapter3.html  part1_chapter4.html  part1_chapter5.html  part2_chapter1.html  part2_chapter2.html  part2_chapter3.html  part2_chapter4.html  part2_chapter5.html  part3_chapter1.html  part3_chapter2.html  part3_chapter3.html  part3_chapter4.html  search-index.js  search.html  searchindex.js  settings.html  source-files.js
docs/_sources/: landing_page.md  part3_chapter4.ipynb
docs/apidocs/: crates.js  source-files.js
docs/apidocs/chiquito/: all.html  index.html
docs/chiquito/: all.html  index.html  sidebar-items.js
docs/chiquito/ast/: enum.ExposeOffset.html  index.html  sidebar-items.js  struct.Circuit.html  struct.Constraint.html  struct.FixedSignal.html  struct.ForwardSignal.html  struct.ImportedHalo2Column.html  struct.InternalSignal.html  struct.Lookup.html  struct.SharedSignal.html  struct.StepType.html  struct.TransitionConstraint.html  type.ASTExpr.html  type.FixedGen.html  type.ImportedHalo2Advice.html  type.ImportedHalo2Fixed.html  type.StepTypeUUID.html  type.StepWitnessGen.html  type.Trace.html
docs/chiquito/backend/: index.html  sidebar-items.js
docs/chiquito/compiler/: fn.compile.html  fn.compile_phase1.html  fn.compile_phase2.html  fn.config.html  index.html  sidebar-items.js  struct.CompilationUnit.html  struct.Compiler.html  (+4 more)
examples/: MiMC7.rs  MiMC7_constants.rs  MiMCsponge.rs  blake2f.rs  bug.py  bytecode.rs  example.rs  factorial.py  factorial.rs  fibo_with_padding.rs  fibonacci.pil  fibonacci.py  fibonacci.rs  fibonacci_ccs.rs  forth.rs  keccak.rs  mimc7.pil  mimc7.py  mimc7.rs  mimc7_constants.py  mimc7_pt2.py  poseidon.py  poseidon.rs  poseidon_constants.py  taikquito_fibonacci.rs  test.py
examples/ptau/: hermez-raw-11  hermez-raw-12
frontend/python/: Cargo.toml  pyproject.toml
src/: aexpr.rs  ast.rs  compiler.rs  dsl.rs  errors.rs  field.rs  frontend.rs  ir.rs  lib.rs  poly.rs  stdlib.rs  util.rs  wit_gen.rs
src/aexpr/: cb.rs  compiler.rs  ir.rs  mod.rs  poly.rs
src/ast/: expr.rs  lookup.rs  mod.rs  query.rs
src/backend/: halo2.rs  mod.rs  plaf.rs
src/ccs/: circuit.rs
src/compiler/: abepi.rs  cell_manager.rs  circuit.zk  circuit_error.zk  compiler.rs  compiler_legacy.rs  cse.rs  linker.rs  mod.rs  setup_inter.rs  step_selector.rs  unit.rs
src/dsl/: cb.rs  lb.rs  sc.rs
src/frontend/: mod.rs  pychiquito.rs
src/interpreter/: expr.rs  frame.rs  mod.rs  value.rs
src/ir/: assigments.rs  assignments.rs  sc.rs
src/parser/: EBNF.md  build.rs  chiquito.lalrpop  mod.rs
src/poly/: cse.rs  mielim.rs  mod.rs  reduce.rs  simplify.rs
src/sbpir/: mod.rs  query.rs  sbpir_machine.rs
test/: circuit.chiquito  circuit_error.chiquito
tutorials/: all_tutorials.ipynb  factorial_boilerplate.ipynb  part2.ipynb  part3_chapter1.ipynb  part3_chapter2.ipynb  part3_chapter3.ipynb  part4_chapter1.ipynb  part4_chapter2.ipynb  part4_chapter3.ipynb  part4_chapter4.ipynb  tutorial_pt1.ipynb  tutorial_pt2.ipynb  tutorial_pt3_ch1.ipynb  tutorial_pt3_ch2.ipynb  tutorial_pt3_ch3.ipynb  tutorial_pt3_ch4.ipynb  tutorial_pt3_ch5.ipynb
tutorials/.ipynb_checkpoints/: tutorial_pt2-checkpoint.ipynb  tutorial_pt3_ch1-checkpoint.ipynb  tutorial_pt3_ch2-checkpoint.ipynb  tutorial_pt3_ch4-checkpoint.ipynb
(+507 files in other folders)
