[package]
name = "chiquito"
version = "0.1.2023110800"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Leo Lara <leo@leolara.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", rev = "da4983e" }

[patch."https://github.com/scroll-tech/halo2.git"]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", rev = "da4983e" }

[dependencies]
pyo3 = { version = "0.19.1", features = ["extension-module"] }

halo2_middleware = { git = "https://github.com/privacy-scaling-explorations/halo2.git", rev = "da4983e" }
halo2_backend = { git = "https://github.com/privacy-scaling-explorations/halo2.git", features = ["derive_serde"], rev = "da4983e" }

num-bigint = { version = "0.4", features = ["rand"] }
uuid = { version = "1.4.0", features = ["v1", "rng"] }
serde = { version = "=1.0.203", features = ["derive"] }
serde_json = "1.0"
hyperplonk_benchmark = { git = "https://github.com/qwang98/plonkish.git", branch = "main", package = "benchmark" }
plonkish_backend = { git = "https://github.com/qwang98/plonkish.git", branch = "main", package = "plonkish_backend" }
regex = "1"
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
lazy_static = "1.4.0"
itertools = "0.12.1"
codespan-reporting = "0.11.1"
rand_chacha = "0.3"

[build-dependencies]
lalrpop = "0.20.0"

[features]
debug_pil = []
